Mon Dec 19 15:02:11 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/ccm/CCM_CoWorkEr_Proxy.h:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy.inl:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy.cpp:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy_T.h:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy_T.inl:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy_T.cpp:

          Removed these files.

Mon Dec 19 14:56:34 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/cuts_chaos_dsml.mpb:

          Added UDM_DYNAMIC_LINKING to the project configuration.

        * install/CUTS_CoSMIC.mwc:

          Fixed build errors in installer for building the
          CHAOS projects.

Sat Dec 17 21:56:27 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/portico/ccm/Portico_CCM.mpc:

          Added missing portico base project.

Sat Dec 17 21:41:38 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Removed unused projects.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/CUTS_GME_PICML.mpc:

          Removed the xscrt base project.

        * MDE/GME/paradigms/PICML/models/CAPI.mga:
        * MDE/GME/paradigms/PICML/models/CAPI.xme:
        * MDE/GME/paradigms/PICML/models/XMLSchema.mga:
        * MDE/GME/paradigms/PICML/models/XMLSchema.xme:
        * MDE/GME/paradigms/PICML/models/workers/logging.mga:
        * MDE/GME/paradigms/PICML/models/workers/logging.xme:
        * MDE/GME/paradigms/PICML/models/workers/testing.mga:
        * MDE/GME/paradigms/PICML/models/workers/testing.xme:

          Upgraded the models.

        * MPC/config/cuts_be.mpb:
        * MPC/config/udm_component.mpb:

          Replaced the udmdefaults base project with the udm project.

        * install/CUTS_CoSMIC.mwc:

          Fixed install error where the application installed correctly,
          but none of the interpreters worked. This was due to DLL hell!!
