@@ -1,42 +1,0 @@
-// -*- C++ -*-
-// $Id$
-
-//
-// ccm_remove
-//
-template <typename COMPONENT, typename COMPONENT_CONTEXT>
-CUTS_INLINE
-void CUTS_CCM_CoWorkEr_T
-<COMPONENT, COMPONENT_CONTEXT>::
-ccm_remove (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
-ACE_THROW_SPEC ((::CORBA::SystemException,
-                 ::Components::CCMException))
-{
-
-}
-
-//
-// ciao_preactivate
-//
-template <typename COMPONENT, typename COMPONENT_CONTEXT>
-CUTS_INLINE
-void CUTS_CCM_CoWorkEr_T <COMPONENT, COMPONENT_CONTEXT>::
-ciao_preactivate (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
-ACE_THROW_SPEC ((::CORBA::SystemException,
-                 ::Components::CCMException))
-{
-
-}
-
-//
-// ccm_passivate
-//
-template <typename COMPONENT, typename COMPONENT_CONTEXT>
-CUTS_INLINE
-void CUTS_CCM_CoWorkEr_T <COMPONENT, COMPONENT_CONTEXT>::
-ccm_passivate (ACE_ENV_SINGLE_ARG_DECL_WITH_DEFAULTS)
-ACE_THROW_SPEC ((::CORBA::SystemException,
-                 ::Components::CCMException))
-{
-
-}
