@@ -1,3 +1,11 @@
+Mon Dec 19 15:04:32 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * cuts/arch/ccm/CCM_CoWorkEr_T.h:
+        * cuts/arch/ccm/CCM_CoWorkEr_T.inl:
+        * cuts/arch/ccm/CCM_CoWorkEr_T.cpp:
+
+          Removed these files.
+
 Mon Dec 19 15:02:11 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * cuts/arch/ccm/CCM_CoWorkEr_Proxy.h:
